--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blobling Game</title>
+    <title>Wondr Multiplayer</title>
+    <!-- Load simple-peer from CDN to avoid bundling issues -->
+    <script src="https://unpkg.com/simple-peer@9.11.1/simplepeer.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
